--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=todolist.db"
+    "DefaultConnection": "Data source=todoapp.db"
   },
   "TokenKey": "super secret key",
   "Logging": {
