--- a/client/angular.json
+++ b/client/angular.json
@@ -25,6 +25,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "./node_modules/@fortawesome/fontawesome-free/css/all.css",
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss",
               "./node_modules/font-awesome/css/font-awesome.css"
