--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=todoapp.db"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=Pa$$w0rd; Database=todolist"
   },
   "TokenKey": "super secret key",
   "Logging": {
